			   XPCE ChangeLog
			   ==============

* FIXED: writing XPM in Windows version.  This includes a patch to the Windows
  port of XPM which inverted transparency.  If you use the source, get the
  updated XPM library from ftp://www.swi.psy.uva.nl/xpce/Windows/lib/

VERSION 6.0.8, distributed with SWI-Prolog 5.0.8
================================================

* ADDED: writing transparent GIF files.

* FIXED: Removed some traces of pre-iso SWI-Prolog concat/3 (replaced
  with atom_concat/3).  Martin Sondergaard.

* FIXED: filter-name in Unix file-dialog when using tuple(Name, Ext)

* ENHANCED: PceEmacs help-page on Prolog Mode.  Martin Sondergaard.

* FIXED: X11 version: make filling monochrome context with colour-images
  work (Anjo Anjewierden).

* FIXED: `finder->label' compatibility.

* FIXED: Missing ws_unlink_colour_map() in X11 version.  Paulo Moura.

VERSION 6.0.7, distributed with SWI-Prolog 5.0.7
================================================

* COMPAT: X11 file-finder: allow again for specifying extensions as .xyz
  
* FIXED: Improved compatibility of X11 selection-handling.  Works again
  with recent Qt versions which demanded the obligatory `targets' target.

* FIXED: Win32: Loading X11 .BM files (broken due with new DIB-based jpeg
  loading).

* ADDED: `segment' argument to `line<-distance' to compute the distance
  from a point to the line-segment.

* FIXED: `path<-distance' (yielding wrong result).

* ENHANCED: Subwindow layout adjustment if actual resizing the windows is
  slow.

* ENHANCED: Windows: JPEG bitmap loading to use a more direct
  approach through DIB.  A similar approach was already in the X11 version
  for some time.

* MODIFIED: Windows: by default we now use the Netscape 216 colour
  colour-cupe as read-only colour-map on 8-bit displays.  This provides
  better reproducable and generally better results.

* ADDED: `image<-rotate' now accepts a float rather then an integer (conversion