@@ -195,6 +195,7 @@ status		loadXliImage(Image image, FileObj file, Int bright);
 void		ws_create_image_from_x11_data(Image image, unsigned char *data, int w, int h);
 ColourMap	ws_colour_map_for_image(Image image);
 void		ws_system_images(void);
+void		ws_prepare_image_mask(Image image);
 
 /* ../src/x11/xstream.c */
 void		ws_close_input_stream(Stream s);
