@@ -1,6 +1,12 @@
 			   XPCE ChangeLog
 			   ==============
 
+* FIXED: `Image->mask' in windows now sets the masked parts to black for
+  proper display.
+
+* FIXED: writing GIF in windows version if 3*width mod 4 =\= 0 it reversed
+  the blue and red colors.
+
 * FIXED: writing XPM in Windows version.  This includes a patch to the Windows
   port of XPM which inverted transparency.  If you use the source, get the
   updated XPM library from ftp://www.swi.psy.uva.nl/xpce/Windows/lib/
